cleaned up html and css to fill pages with content / changed from using visibility style to using display style to change page content / created functions to use display style to change between pages / implemented said functions anywhere a page change had occurred previously / corrected logIn function which was searching for user password incorrectly / edited function which changes page to Index.html.erb so that it will also clear the current user hand histories displayed

--- a/app/assets/stylesheets/main copy.css
+++ b/app/assets/stylesheets/main copy.css
@@ -1,56 +1,31 @@
+/*
+#testing-buttons {
+	width: 100%;
+}
+
 html, body {
     margin: 0;
     height: 100%;
 }
 
-#userHome {
-	display: none;
-	height: 100%;
-}
-
-#index {
-	height: 100%;
-}
-
-#play-analyse {
-	height: 88%;
-	width: 100%;
-}
-
-#logo-link-index a {
-	text-decoration: none;
-}
-
-#logo-link-user a {
-	text-decoration: none;
-}
-
 #banner {
 	width: 100%;
-	height: 12%;
+	height: 90px;
 	background-color: #3a5795;
 	border-bottom: 2px solid #133783;
 }
 
-#logo-link-index {
+#logo-link {
 	padding-left: 14%;
 	height: 100%;
 	float: left;
 }
 
-#logo-link-index h1 {
-	font-size: 41px;
-	color: whitesmoke;
-	margin-top: 8%;
+#logo-link a {
+	text-decoration: none;
 }
 
-#logo-link-user {
-	padding-left: 14%;
-	height: 100%;
-	float: left;
-}
-
-#logo-link-user h1 {
+#logo-link h1 {
 	font-size: 41px;
 	color: whitesmoke;
 	margin-top: 8%;
@@ -63,7 +38,6 @@ html, body {
 
 #new-user-form {
 	width: 290px;
-	padding-left: 28.6%;
 }
 
 #login-form p {
@@ -72,19 +46,22 @@ html, body {
 
 #index-main {
 	background-color: #edf0f5;
+	height: 80%;
 	width: 100%;
-	height: 88%;
+	overflow: hidden;
+	padding-top: 65px;
 }
 
 #index-main-left {
 	width: 50%;
 	height: 100%;
 	float:left;
+	padding-top: 38px;
 }
 
 #index-main-left h2 {
 	width: 74%;
-	padding-top: 17%;
+	padding-top: 5%;
 	padding-left: 16%;
 	text-align: center;
 	line-height: 133%;
@@ -98,10 +75,6 @@ html, body {
 	line-height: 133%;
 }
 
-#funny-image {
-	padding-left: 26%;
-}
-
 #funny-image img {
 	border-radius: 25px;
     background-position: left top;
@@ -112,18 +85,15 @@ html, body {
 }
 
 #index-main-right {
-	width: 50%;
+	width: 30%;
+	padding-top: 2%;
 	height: 100%;
 	float: right;
+	padding-right: 82px;
 }
 
 #index-main-right h2 {
-	padding-top: 10%;
-	padding-left: 35%;
-}
-
-#index-main-right table {
-	width: 290px;
+	padding-left: 36px;
 }
 
 #create-account-table-row {
@@ -158,15 +128,15 @@ html, body {
 
 #play-half {
 	width: 50%;
-	height: 100%;
-	float:left;
+	height: 300px;
+	float: left;
 	background-color: lightblue;
 }
 
 #results-half {
 	width: 50%;
-	height: 100%;
-	float:left;
+	height: 300px;
+	float: left;
 	background-color: lightcoral;
 }
 
